moved new page into dogs folder, fixed stying

--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container new-form">
-  <h1>Add a Pup to be Fostered</h1>
+  <h1 class="new-dog">Add a Pup to be Fostered</h1>
   <div class="add_form">
   <%= simple_form_for(@dog) do |f| %>
   <%= f.input :name %>
@@ -7,7 +7,7 @@
   <%= f.input :age %>
   <%= f.input :description %>
   <%= f.input :photo, as: :file %>
-  <%= f.submit "Finish! 👌🏽", class: "btn btn-info" %>
+  <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-dark" %>
   <% end %>
   </div>
 </div>
