added links to navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,10 @@
         <a class="nav-link" href="#">Dashboard</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">All pups</a>
+        <a class="nav-link" href="<%= dogs_path %>">All Pups</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= new_dog_path %>">Add Pup</a>
       </li>
       <li class="nav-item dropdown">
         <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/taylormade38" />
