--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Dashboard</a>
+        <a class="nav-link" href="<%= dashboard_path %>">Dashboard</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="<%= dogs_path %>">All Pups</a>
