--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>Be a hero with <strong>Pupper</strong></h1>
     <p>Provide a loving home to a pup in need.</p>
-    <a class="btn btn-outline-light" href="#">Join now</a>
+    <a class="btn btn-outline-light" href="<%= new_user_registration_path %>">Join now</a>
   </div>
 </div>
 
