added hover effect to cards

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,8 @@
     <a class="btn btn-outline-light" href="<%= new_user_registration_path %>">Join now</a>
   </div>
 </div>
+
+
+<% 50.times do %>
+<p> PUPPIES PUPPIES PUPPIES</p>
+<% end %>
