--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,6 +13,10 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
+.card-category:hover {
+  opacity: 0.9;
+  }
+
 .row {
   display: flex;
   flex-wrap: wrap;
