--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -8,6 +8,12 @@
   <% end %>
 </div>
 
+<div class="links">
+    <div class="make-request">
+        <%= link_to "Request to Foster", new_dog_request_path(@dog) %>
+    </div>
+</div>
+
 <div class="content">
   <div class="photo">
     <% if @dog.photo.attached? %>
@@ -16,3 +22,4 @@
       <img src="https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="rounded" alt="...">
     <% end %>
   </div>
+</div>
