--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,3 +1,10 @@
 <div class="container">
-<h1>This will be the dashboard</h1>
+    <h1>Dashboard for <%= current_user.email %></h1>
+    <h2> Dogs </h2>
+    <p><%= @dogs %></p>
+    <h2> Requests </h2>
+    <p><%= @requests %></p>
+    <h2> Reviews </h2>
+    <p><%= @reviews %></p>
+
 </div>
