fixed bug on cards

--- a/app/assets/stylesheets/components/_card-trip.scss
+++ b/app/assets/stylesheets/components/_card-trip.scss
@@ -1,3 +1,15 @@
+.card-trip-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
+@media (max-width: 500px) {
+  .card-trip-container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 .card-trip {
   overflow: hidden;
   background: white;
