--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
 
 
 
-<div class="container py-5 cards-container ">
+<div class="container py-5 card-trip-container ">
   <% @dogs.take(12).each do |dog| %>
     <%= link_to dog_path(dog) do %>
       <div class="card-trip">
