--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -5,8 +5,8 @@
     <% @dogs.each do |dog| %>
       <div class="col-md-4 mb-3">
         <%= link_to dog_path(dog) do %>
-          <% if dog.photo.attached? %>
-            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path dog.photo.key %>)"><%= dog.name %>
+          <% if dog.photos.attached? %>
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path dog.photos.first.key %>)"><%= dog.name %>
             </div>
           <% else %>
             <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80)">
