--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,9 +16,9 @@
         <div class="card-trip-infos">
           <div>
             <h2><%= dog.name %></h2>
-            <p>Short description here!</p>
+            <p><%= dog.breed  %></p>
           </div>
-          <h2 class="card-trip-date">June, 28</h2>
+          <h2 class="card-trip-age">Age: <%= dog.age %> weeks</h2>
         </div>
       </div>
     <% end %>
