changed size of uploaded photos and default photos

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -16,7 +16,7 @@ div.bottom-container {
   margin: 50px;
 }
 
-carousel-inner {
-  width: 300px;
-  height: 300px;
+.default {
+  width: 350px;
+  height: 350px;
 }
