--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -25,7 +25,7 @@
           <% end %>
           <% else %>
           <div class="carousel-item active">
-            <img src="https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="d-block w-100" alt="...">
+            <img class="default" src="https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="d-block w-100" alt="...">
           </div>
           <% end %>
         </div>
