--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a class="nav-link" href="<%= dogs_path %>">All Pups</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= new_dog_path %>">Add Pup</a>
+      </li>
         <% if user_signed_in? %>
         <li class="nav-item">
         <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link"  %>
