--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,12 @@
 // Define variables for your color scheme
 
-// For example:
-$red: #FD1015;
-$blue: #167FFB;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+// Colors go from darkest to lightest - all are diff shades of same color:
+$darkest-green: #07BEB8;
+$medium-green: #3DCCC7;
+$medium-blue: #68D8D6;
+$lighter-blue: #9CEAEF;
+$lightest-color: #C4FFF9;
+
+
+$footer-gray: #F7F7F7;
+// $light-gray: #F4F4F4;
