--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,8 +5,8 @@
             <div class="dashboard-dog-list">
                 <% @dogs.each do |dog| %>
                     <div class="dashboard-dog-card card my-3" style="width: 18rem">
-                        <% if dog.photo.attached? %>
-                           <div class="dog-picture" style="background-image:url('<%= cl_image_path dog.photo.key %>')">
+                        <% if dog.photos.any? %>
+                           <div class="dog-picture" style="background-image:url('<%= cl_image_path dog.photos.first.key %>')">
                            </div>
                         <% else %>
                             <div class="dog-picture" style="background-color: grey"></div>
