added a fading navbar to index page

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -4,11 +4,11 @@
       <div class="col-md-4">
         <div class="card ">
           <div class="card-header ">
-            <h4 class="card-title">**Dog Name**</h4>
+            <h4>**Dog Name**</h4>
             <p class="card-category">**Active/Pending/Denied**</p>
           </div>
           <div class="card-body">
-            <div class="legend">
+            <div class="card-info">
               <i class="fa fa-circle text-info"></i> Pending
             </div>
             <hr>
@@ -20,3 +20,4 @@
       </div>
     </div>
   </div>
+</div>
