--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,6 +1,7 @@
 .container-top {
-    margin-top: 50px;
+    margin-top: 80px;
     display: flex;
+    justify-content: center;
 }
 
 img.rounded {
