--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -17,5 +17,5 @@ $headers-font: "Nunito", "Helvetica", "sans-serif";
 
 a:hover {
   text-decoration: none !important;
-  color: black !important;
+  // color: black !important;
 }
