added test content to dash card for pending requests

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,15 +1,15 @@
 <div class="content">
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <div class="col-md-4">
         <div class="card ">
           <div class="card-header ">
-            <h4>**Dog Name**</h4>
-            <p class="card-category">**Active/Pending/Denied**</p>
+            <h4>Carlos</h4>
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80)">
           </div>
           <div class="card-body">
             <div class="card-info">
-              <i class="fa fa-circle text-info"></i> Pending
+              <i class="fa fa-circle text-info"></i> Status: Pending
             </div>
             <hr>
             <div class="status">
