aligned header and added border

--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container py-5 cards-container ">
-  <h1>All Pups</h1>
+  <h1 id="all-pups">All Pups</h1>
   <div class=“row” style="display: flex; flex-wrap: wrap;">
 
     <% @dogs.each do |dog| %>
