added margin on edit button

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container-top">
     <h1><%= @dog.name %></h1>
     <% if policy(@dog).edit? %>
-    <%= link_to "Edit", edit_dog_path(@dog), class: "btn btn-outline-light" %>
+    <%= link_to "Edit", edit_dog_path(@dog), class: "btn btn-outline-light", id: "edit" %>
     <% end %>
     <% if policy(@dog).destroy? %>
     <%= link_to "Delete", dog_path(@dog), method: :delete, class: "btn btn-outline-light" %>
