added functionality to tabs in dashboard

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -7,26 +7,30 @@
     text-align: center;
   }
 }
+.dashboard-nav {
 
-.tabs-underlined {
-  display: flex;
-  align-items: center;
+  .tabs-underlined {
+    display: flex;
+    align-items: center;
+  }
+
+  .tabs-underlined {
+    color: black !important;
+    padding: 8px;
+    margin: 8px 16px;
+    opacity: .4 !important;
+    cursor: pointer;
+    text-decoration: none;
+    border-bottom: 4px solid transparent !important;
+    background-color: white !important;
+  }
+
+  .tabs-underlined.active {
+    opacity: 1 !important;
+    border-bottom: 3px solid #3DCCC7 !important;
+  }
 }
 
-.tabs-underlined .tab-underlined {
-  color: black;
-  padding: 8px;
-  margin: 8px 16px;
-  opacity: .4;
-  cursor: pointer;
-  text-decoration: none;
-  border-bottom: 4px solid transparent;
-}
-
-.tabs-underlined .tab-underlined.active {
-  opacity: 1;
-  border-bottom: 3px solid #3DCCC7;
-}
 
 .dash-content {
   margin-bottom: 80px;
