--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -1,24 +1,39 @@
-form {
-  width: 400px;
+
+.bg-img {
+  /* The image used */
+  background-image: url("https://images.unsplash.com/photo-1544197807-bb503430e22d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80");
+
+  /* Control the height of the image */
+  min-height: 660px;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
-h1 {
-  margin-bottom: 20px;
+/* Add styles to the form container */
+.container {
+  position: absolute;
+  right: 0;
+  margin: 80px;
+  max-width: 300px;
+  padding: 16px;
+  background-color: white;
 }
 
+/* Set a style for the submit button */
 .btn {
-  margin-top: 10px;
-  color: #3DCCC7;
+  background-color: $medium-green;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
 }
 
-div.add_form {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+.btn:hover {
+  opacity: 1;
 }
-
-.new-dog {
-  text-align: center;
-  margin-top: 80px;
-}
-
