--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,13 +1,15 @@
-<div class="container new-form">
-  <h1 class="new-dog">Add a Pup to be Fostered</h1>
-  <div class="add_form">
-  <%= simple_form_for(@dog) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :breed %>
-  <%= f.input :age %>
-  <%= f.input :description %>
-  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-dark" %>
-  <% end %>
+<div class="bg-img">
+  <div class="container new-form">
+    <h1 class="new-dog">Foster a pup</h1>
+    <div class="add_form">
+      <%= simple_form_for(@dog) do |f| %>
+      <%= f.input :name %>
+      <%= f.input :breed %>
+      <%= f.input :age %>
+      <%= f.input :description %>
+      <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+      <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-dark" %>
+      <% end %>
+    </div>
   </div>
 </div>
