fixed global CSS issues

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,3 +5,11 @@
 @import "request";
 @import "dashboard";
 @import "dogindex";
+
+.btn {
+  background-color: $medium-green;
+  color: white;
+  border: none;
+  cursor: pointer;
+  opacity: 0.9;
+};
