--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,3 +1,4 @@
+<div class="index-container">
 <div class="container py-5 cards-container ">
   <h1>All Pups</h1>
   <div class=“row” style="display: flex; flex-wrap: wrap;">
@@ -17,4 +18,8 @@
       <% end %>
       <% end %>
   </div>
+</div>
+<div class="map-container">
+  <%= render "shared/map" %>
+</div>
 </div>
