--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :breed %>
   <%= f.input :age %>
   <%= f.input :description %>
+  <%= f.input :address %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-dark" %>
   <% end %>
