--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,39 @@
-<h2>Sign up</h2>
+<div class="background-container col-12 d-flex justify-content-end">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <div class="form-box d-flex flex-column align-items-center col-md-6">
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+        <h2 class="justify-content-start">Sign up</h2>
 
-<%= render "devise/shared/links" %>
+        <!-- form row -->
+        <div class="align-items-center justify-content-center flex-end">
+            <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= f.error_notification %>
+              <div class="form-inputs form-item">
+                <%= f.input :email,
+                            required: true,
+                            autofocus: true,
+                            input_html: { autocomplete: "email" }%>
+                <%= f.input :password,
+                            required: true,
+                            hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                            input_html: { autocomplete: "new-password" } %>
+                <%= f.input :password_confirmation,
+                            required: true,
+                            input_html: { autocomplete: "new-password" } %>
+              </div>
+              <div class="form-actions d-flex justify-content-center">
+                <%= f.button :submit, "Sign up", class:"btn btn-sign-up" %>
+              </div>
+            <% end %>
+        </div>
+
+        <!-- links row -->
+        <div class="d-flex">
+            <p>Already have an account?</p>
+            <%= render "devise/shared/links" %>
+        </div>
+
+    </div>
+</div>
+
