Designed log-in page

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,3 +1,11 @@
+.btn {
+  background-color: $medium-green;
+  color: white;
+  border: none;
+  cursor: pointer;
+  opacity: 0.9;
+}
+
 .btn-sign-up {
     background-color: $medium-blue;
     color: white !important;
