--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -48,7 +48,9 @@
         </div>
         <div class="links">
           <div class="make-request">
+            <% if policy(@request).create? %>
             <%= link_to "Request to Foster", new_dog_request_path(@dog), class: "btn btn-outline-dark" %>
+            <% end %>
           </div>
         </div>
       </div>
