fixed layout and added sticky white nav to pups page

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,11 +1,16 @@
 #map {
-  height: calc( 100vh - 70px );
+  height: calc(100vh - 70px);
   position: sticky;
   top: 70px;
   width: 300px;
 }
 
-.index-container {
 
+.main-container {
+  display: flex;
 
+}
+
+.all-pups-h1 {
+  margin-top: 70px;
 }
