--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,8 +1,8 @@
+
 .card-category {
   background-size: cover;
   background-position: center;
   height: 180px;
-  display: grid;
   text-align: center;
   align-items: flex-end;
   color: white;
@@ -11,6 +11,11 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+
+}
+
+.cards-container {
+  margin-top: 70px;
 }
 
 .card-category:hover {
