--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <% if current_page?(dogs_path) %>
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top navbar-lewagon-white">
+<div class="navbar navbar-expand-sm navbar-light navbar-pupper fixed-top navbar-lewagon-white">
 <% else %>
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
 <% end %>
