--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,6 +3,16 @@
   background: transparent;
   padding-top: 0px;
   transition: 0.5s background-color ease;
+  a {
+    color: #9CEAEF;
+  }
+  a:hover {
+    color: white;
+  }
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: rgba(250, 250, 250, 0.5);
 }
 
 .navbar-pupper .navbar-collapse {
@@ -11,6 +21,16 @@
 
 .navbar-white {
   background-color: white;
+  a {
+    color: black !important;
+  }
+
+// .navbar-light .navbar-nav .nav-link {
+//   color: rgba(0, 0, 0, 0.5) !important;
+// }
+}
+.nav-dropdown-link {
+  color: black;
 }
 
 .nav-item .nav-link {
@@ -35,4 +55,10 @@
   font-family: 'Dosis', sans-serif;
   margin-left: 8px;
   font-size: 2rem;
+}
+
+a.nav-dropdown-link {
+  padding-left: 8px;
+      color: #07BEB8;
+    display: block;
 }
