--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -5,7 +5,7 @@
     <%= link_to "Edit", edit_dog_path(@dog), class: "btn btn-outline-light", id: "edit" %>
     <% end %>
     <% if policy(@dog).destroy? %>
-    <%= link_to "Delete", dog_path(@dog), method: :delete, class: "btn btn-outline-light" %>
+    <%= link_to "Delete", dog_path(@dog), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-outline-light" %>
     <% end %>
   </div>
 
