--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,30 +8,24 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
         <%= link_to "View Pups", dogs_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Add Pup", new_dog_path, class: "nav-link" %>
+        <%= link_to "Add A Pup", new_dog_path, class: "nav-link" %>
       </li>
-        <% if user_signed_in? %>
-        <li class="nav-item">
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link"  %>
-        </li>
-        <% else %>
-        <li class="nav-item">
-        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
-        <% end %>
-      <li class="nav-item dropdown">
-        <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/taylormade38" />
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+        <% if !user_signed_in? %>
+          <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          </li>
+          <% else %>
+            <li class="nav-item dropdown">
+          <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to "Dashboard", dashboard_path, class: "nav-dropdown-link" %>
+          <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-dropdown-link" %>
         </div>
       </li>
+      <% end %>
     </ul>
   </div>
 </div>
