fixed navbar style

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <% if current_page?(dogs_path) %>
 <div class="navbar navbar-expand-sm navbar-light navbar-pupper fixed-top navbar-lewagon-white">
 <% else %>
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+<div class="navbar navbar-expand-sm navbar-light navbar-pupper fixed-top">
 <% end %>
    <%= link_to root_path, class: "link-icon" do %>
     <p>Pupper <i class="fa fa-paw" aria-hidden="true"></i></p>
