--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,7 +4,7 @@
   padding-top: 0px;
   transition: 0.5s background-color ease;
   a {
-    color: #9CEAEF;
+    color: white;
   }
   a:hover {
     color: white;
