--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,10 +4,10 @@
   padding-top: 0px;
   transition: 0.5s background-color ease;
   a {
-    color: #9CEAEF;
+    color: $darkest-green;
   }
   a:hover {
-    color: white;
+    color: $darkest-green;
   }
 }
 
