--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,13 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1512341350577-a09358311cb1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);">
   <div class="container">
-    <h1>Be a hero with <strong>Pupper</strong></h1>
-    <p>Provide a loving home to a pup in need.</p>
-    <a class="btn btn-outline-light" href="<%= new_user_registration_path %>">Join now</a>
+    <% if user_signed_in? %>
+        <h1>Welcome! <strong><%= @user.email %></strong></h1>
+        <%= link_to "Go to Dashboard", dashboard_path, class: "btn my-3"%>
+    <% else %>
+        <h1>Be a hero with <strong>Pupper</strong></h1>
+        <p>Provide a loving home to a pup in need.</p>
+        <a class="btn btn-outline-light" href="<%= new_user_registration_path %>">Join now</a>
+    <% end %>
   </div>
 </div>
 
