--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,6 +1,6 @@
 
 <div class="bg-img">
-  <div class="container new-form">
+  <div class="form-container new-form">
     <h1 class="new-dog">Foster a pup</h1>
     <div class="add_form">
       <%= simple_form_for(@dog) do |f| %>
