added margin on edit and delete buttons on dog show page

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -2,10 +2,10 @@
   <div class="container-top">
     <h1><%= @dog.name %></h1>
     <% if policy(@dog).edit? %>
-    <%= link_to "Edit", edit_dog_path(@dog), class: "btn btn-outline-light", id: "edit" %>
+    <%= link_to "Edit", edit_dog_path(@dog), class: "btn btn-outline-light show-button", id: "edit" %>
     <% end %>
     <% if policy(@dog).destroy? %>
-    <%= link_to "Delete", dog_path(@dog), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-outline-light" %>
+    <%= link_to "Delete", dog_path(@dog), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-outline-light show-button" %>
     <% end %>
   </div>
 
