--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -30,12 +30,12 @@
 }
 
 .form-container {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  /* margin-right: auto; */
-  margin-left: auto;
-  max-width: 300px;
-  padding-top: 80px;
-  padding-bottom: 80px;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: 75px;
+    margin-left: auto;
+    max-width: 360px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
