--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -3,7 +3,7 @@
   <h3>All Pups</h3>
   <%= simple_form_for :search, url: root_path, method: :get do |f| %>
   <div class="search-form-control form-group">
-    <label for="search_query">Search for a location:</label>
+    <label for="search_query" id="search-label">Search for a location:</label>
     <input class="form-control string required" type="text" name="search[query]" id="search_query" />
     <button name="button" type="submit" class="btn btn-flat">
       <i class="fas fa-search"></i> Search
