--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -14,7 +14,7 @@
   <div class="container cards-container" id="dogs"></div>
   <div class="row">
     <% @dogs.each do |dog| %>
-      <div class="col-md-6 mb-4">
+      <div class="col-md-4 mb-3 dog-card">
         <%= link_to dog_path(dog) do %>
           <% if dog.photos.attached? %>
             <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path dog.photos.first.key %>)"><%= dog.name %>
