made all pics on index the correct orientation, added reject button to request cards, added dog image to request cards

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -8,7 +8,7 @@
     <a class="nav-link tabs-underlined" id="pills-upcoming-tab" data-toggle="pill" href="#pills-upcoming" role="tab" aria-controls="pills-upcoming" aria-selected="false">Upcoming Sessions</a>
   </li>
   <li class="nav-item" role="presentation">
-    <a class="nav-link tabs-underlined" id="pills-past-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-past" aria-selected="false">Past Sessions</a>
+    <a class="nav-link tabs-underlined" id="pills-past-tab" data-toggle="pill" href="#pills-past" role="tab" aria-controls="pills-past" aria-selected="false">Past Sessions</a>
   </li>
   <li class="nav-item" role="presentation">
     <a class="nav-link tabs-underlined" id="pills-incoming-tab" data-toggle="pill" href="#pills-incoming" role="tab" aria-controls="pills-incoming" aria-selected="false">Your Pups</a>
