--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,16 +1,7 @@
 <div class="main-container">
 <div class="container left-container">
   <h3>All Pups</h3>
-  <%= simple_form_for :search, url: root_path, method: :get do |f| %>
-  <div class="search-form-control form-group">
-    <label for="search_query" id="search-label">Search for a location:</label>
-    <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-    <button name="button" type="submit" class="btn btn-flat">
-      <i class="fas fa-search"></i> Search
-    </button>
-  </div>
-<% end %>
-
+  <div id="geocoder" class="geocoder mt-5"></div>
   <div class="container cards-container" id="dogs"></div>
   <div class="row">
     <% @dogs.each do |dog| %>
@@ -29,5 +20,6 @@
       <% end %>
   </div>
 </div>
+<div id="geocoder" class="geocoder mt-5"></div>
 <%= render "shared/map" %>
 </div>
