--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,6 +25,9 @@
                 <%= f.input :password_confirmation,
                             required: true,
                             input_html: { autocomplete: "new-password" } %>
+                <%= f.input :avatar,
+                            required: true %>
+
               </div>
               <div class="form-actions d-flex justify-content-center">
                 <%= f.button :submit, "Sign up", class:"btn btn-sign-up" %>
