--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,9 +2,9 @@
 
 <div class="review_form">
   <%= simple_form_for([@request, @review]) do |f| %>
-  <%= f.input :rating %>
+  <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
   <%= f.input :content %>
-  <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-dark" %>
+  <%= f.submit "Submit Review", class: "btn btn-outline-dark" %>
   <% end %>
 </div>
 
