added popups to markers

--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="main-container">
 <div class="container left-container">
   <h3>All Pups</h3>
-  <div id="geocoder" class="geocoder mt-5"></div>
+  <div id="geocoder" class="geocoder mt-5" style="width: 200px;"></div>
   <div class="container cards-container" id="dogs"></div>
   <div class="row">
     <% @dogs.each do |dog| %>
