--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -11,7 +11,7 @@
     <a class="nav-link tabs-underlined" id="pills-past-tab" data-toggle="pill" href="#pills-past" role="tab" aria-controls="pills-past" aria-selected="false">My Past Fosters</a>
   </li>
   <li class="nav-item" role="presentation">
-    <a class="nav-link tabs-underlined" id="pills-incoming-tab" data-toggle="pill" href="#pills-incoming" role="tab" aria-controls="pills-incoming" aria-selected="false">My Pups</a>
+    <a class="nav-link tabs-underlined" id="pills-incoming-tab" data-toggle="pill" href="#pills-incoming" role="tab" aria-controls="pills-incoming" aria-selected="false">My Pups' Requests</a>
   </li>
 </ul>
 <div class="tab-content" id="pills-tabContent">
