--- a/app/assets/stylesheets/pages/_login_signup.scss
+++ b/app/assets/stylesheets/pages/_login_signup.scss
@@ -4,19 +4,20 @@
     background-position: center;
     height: 100vh;
     display: flex;
-
 }
 
 
 .form-box {
-    background-color: white;
     display: flex;
     margin-top: 150px;
     margin-bottom: 150px;
     margin-right: 100px;
     padding: 100px;
     background-color: rgba(255,255,255,0.84);
-    border-radius: 10px
+    border-radius: 10px;
+    @media (max-width: 375px){
+        align-items: end;
+    }
 }
 
 .form-item {
