--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="main-container">
 <div class="container left-container">
   <h3>All Pups</h3>
-  <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+  <%= simple_form_for :search, url: dogs_path, method: :get, placeholder: "Search for location" do |f| %>
   <div class="search-form-control form-group">
     <label for="search_query" id="search-label">Search for a location:</label>
     <input class="form-control string required" type="text" name="search[query]" id="search_query" />
