--- a/app/views/dogs/_info_window.html.erb
+++ b/app/views/dogs/_info_window.html.erb
@@ -1,3 +1,5 @@
-<h2><%= dog.name %></h2>
-<p><%= dog.breed %></p>
+<div class="popup-container">
+<h4><%= dog.name %></h4>
+<p>Breed: <%= dog.breed %></p>
 <p><%= dog.address %></p>
+</div>
