added modal template

--- a/app/views/dogs/_card.html.erb
+++ b/app/views/dogs/_card.html.erb
@@ -16,6 +16,9 @@
       <% if policy(request).accept? %>
         <%= link_to 'Accept', accept_request_path(request), method: :patch, class: "request-options" %>
         <%= link_to 'Reject', reject_request_path(request), method: :patch, class: "request-options" %>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
       <% end %>
       <% if review && policy(review).create? %>
         <%= link_to 'Write Review', new_request_review_path(request), class: "btn btn-outline-success" %>
