--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -31,7 +31,8 @@
 
 #page-container {
   position: relative;
-  min-height: 100vh;
+  min-height: calc(100vh - 80px);
+
 }
 
 #content-wrap {
@@ -39,7 +40,7 @@
 }
 
 .footer {
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: 4rem;            /* Footer height */
