--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -31,8 +31,7 @@
 
 #page-container {
   position: relative;
-  min-height: calc(100vh - 80px);
-
+  min-height: 100vh;
 }
 
 #content-wrap {
@@ -40,7 +39,7 @@
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 4rem;            /* Footer height */
