--- a/app/views/dogs/_card.html.erb
+++ b/app/views/dogs/_card.html.erb
@@ -2,10 +2,10 @@
   <div class="card-header ">
     <h4><%= request.dog.name %></h4>
     <% if request.dog.photos.any? %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path request.dog.photos.first.key %>')">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path request.dog.photos.first.key %>')">
     </div>
     <% else %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80')">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80')">
     </div>
     <% end %>
 
@@ -16,14 +16,14 @@
         <p>Requested by: <%= link_to request.user.name, user_path(request.user) %></p>
       </div>
       <% if policy(request).accept? %>
-        <%= link_to 'Accept', accept_request_path(request), method: :patch, class: "request-options" %>
-        <%= link_to 'Reject', reject_request_path(request), method: :patch, class: "request-options" %>
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
+      <%= link_to 'Accept', accept_request_path(request), method: :patch, class: "request-options" %>
+      <%= link_to 'Reject', reject_request_path(request), method: :patch, class: "request-options" %>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-<%= request.id %>">
+  View Request
 </button>
       <% end %>
       <% if review && policy(review).create? %>
-        <%= link_to 'Write Review', new_request_review_path(request), class: "btn btn-outline-success" %>
+      <%= link_to 'Write Review', new_request_review_path(request), class: "btn btn-outline-success" %>
       <% end %>
       <hr>
       <div class="status">
@@ -33,3 +33,30 @@
   </div>
 </div>
 
+<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal-<%= request.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Name: <%= request.user.name %>
+        Start Date: <%= request.start_date %>
+        End Date: <%= request.end_date %>
+        Message: <%= request.content %>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
