--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-pupper fixed-top">
   <%= link_to root_path, class: "link-icon" do %>
-    <i class="fa fa-paw" aria-hidden="true"></i><span class="title-bar">Pupper</span>
+  <i class="fa fa-paw" aria-hidden="true"></i><span class="title-bar">Pupper</span>
   <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -13,15 +13,16 @@
       <li class="nav-item">
         <%= link_to "Add A Pup", new_dog_path, class: "nav-link" %>
       </li>
-        <% if !user_signed_in? %>
-          <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-          <% else %>
-            <li class="nav-item dropdown">
-          <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier">
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+      <% if !user_signed_in? %>
+      <li class="nav-item">
+        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+      </li>
+      <% else %>
+      <li class="nav-item dropdown">
+        <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier">
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Dashboard", dashboard_path, class: "nav-dropdown-link" %>
+          <%= link_to "My Profile", user_path(current_user), class: "nav-dropdown-link" %>
           <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-dropdown-link" %>
         </div>
       </li>
