user can edit their profile when they view their profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,7 @@
         <%= @user.email %> <br>
         Joined: <%= @user.created_at.strftime('%B %Y') %>
       </p>
+      <p><%= link_to "Edit Profile", edit_user_registration_path %></p>
     </div>
   </div>
 </div>
