--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-pupper fixed-top">
+<div class="navbar <%= 'background-white' if params[:action] != 'home' %> navbar-expand-sm navbar-light navbar-pupper fixed-top">
   <%= link_to root_path, class: "link-icon" do %>
     <i class="fa fa-paw" aria-hidden="true"></i><span class="title-bar">Pupper</span>
   <% end %>
@@ -19,7 +19,7 @@
           </li>
           <% else %>
             <li class="nav-item dropdown">
-          <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier">
+          <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="<%= cl_image_path current_user.avatar.key %> ">
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Dashboard", dashboard_path, class: "nav-dropdown-link" %>
           <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-dropdown-link" %>
