--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,3 +3,16 @@ body {
   background-color: #FFFFFF;
 }
 
+.card-trip-container {
+  margin: -30px 25px;
+}
+
+div.home-search-form {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#home-head-container {
+  margin-top: 15px;
+}
